# z4j-bare

./: CHANGELOG-1.x-legacy.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/z4j_bare/: __init__.py  __main__.py  _process_singleton.py  buffer.py  cli.py  control.py  declarative.py  diagnostics.py  dispatcher.py  framework.py  heartbeat.py  install.py  orchestrator_detect.py  runtime.py  safety.py  storage.py  watcher.py
src/z4j_bare/transport/: __init__.py  longpoll.py  websocket.py
tests/unit/: test_buffer.py  test_dispatcher.py  test_install_resolve.py  test_orchestrator_detect.py  test_process_singleton.py  test_runtime.py  test_safety.py
