[project]
name = "z4j-bare"
version = "1.0.5"
description = "z4j framework-free agent bootstrapper (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "agent", "task", "celery", "queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core>=1.0.3",
    "httpx>=0.28.1",
    "websockets>=16.0",
]

[project.optional-dependencies]
# Filesystem watcher for ``Z4J_DEV_MODE=true``. Lets the agent
# fire a registry-delta when a ``tasks.py`` changes on disk so
# the dashboard sees newly-added tasks without a worker
# restart. Off by default; not loaded unless the env flag is
# set AND ``z4j-bare[watcher]`` is installed - production
# images never pull this in.
watcher = [
    "watchdog>=6.0",
]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-bare/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-bare/issues"
Source = "https://github.com/z4jdev/z4j-bare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_bare"]
