[project]
name = "z4j-bare"
version = "1.6.0"
description = "z4j framework-free agent bootstrapper (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "agent", "task", "celery", "queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    # Audit fix CRIT-3 (1.2.2 eighth-pass): floor bumped to
    # 1.2.2 because ``z4j_bare/declarative.py`` imports
    # ``z4j_core.celerybeat_compat`` which only ships in
    # z4j-core 1.2.2+. An install with z4j-core 1.1.x would
    # ImportError on the declarative reconciler module
    # (which every framework adapter, z4j-django, z4j-flask,
    # z4j-fastapi, depends on). Pre-1.2.2 the dispatcher
    # path needed CommandPayload from 1.1.0; that floor is
    # subsumed by the 1.2.2 floor here.
    # z4j-core >=1.3.1: needed for the SCHEDULE_SNAPSHOT EventKind
    # the runtime emits at boot / on the periodic timer / on the
    # ``schedule.resync`` command. Pre-1.3.1 the kind doesn't exist;
    # the brain would log "unknown event kind" and ignore the snapshot.
    "z4j-core>=1.4.0,<2",
    "httpx>=0.28.1",
    "websockets>=16.0",
]

[project.scripts]
# 1.1.2+ console-script entry. ``z4j-bare`` (hyphen) is a thin
# wrapper around ``python -m z4j_bare`` - both forms work, both
# are supported. Operators choose based on shop convention; the
# hyphen form matches the pip distribution name.
z4j-bare = "z4j_bare.cli:main"

[project.optional-dependencies]
# Filesystem watcher for ``Z4J_DEV_MODE=true``. Lets the agent
# fire a registry-delta when a ``tasks.py`` changes on disk so
# the dashboard sees newly-added tasks without a worker
# restart. Off by default; not loaded unless the env flag is
# set AND ``z4j-bare[watcher]`` is installed - production
# images never pull this in.
watcher = [
    "watchdog>=6.0",
]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-bare/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-bare/issues"
Source = "https://github.com/z4jdev/z4j-bare"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_bare"]
